<resources>
    <string name="app_name">JogRecord</string>
    <string name="title_activity_maps">JogRecord</string>
    <string name="wifi_confirm_dialog_title">WIFIをオフにしますか</string>
    <string name="wifi_confirm_dialog_message">市街地を走ると、wifiを拾って現在地が飛ぶことがあります</string>

    <string name="alert_dialog_yes">YES</string>
    <string name="alert_dialog_no">NO</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="save_confirm_dialog_title">この走行を記録しますか</string>
    <string name="text_on">Stop</string>
    <string name="text_off">start</string>
    <string name="eltime">経過時間</string>
    <string name="chronometer_format">%s</string>
    <string name="distance">移動距離</string>
    <string name="position">スタート地点</string>
    <string name="view">一覧</string>
    <string name="ret">戻る</string>

    <string name="empty">表示するデータがありません</string>
    <string name="second">秒</string>
    <string name="km">km</string>
    <string name="speed">時速</string>
    <string name="action_view">一覧</string>
    <string name="action_quit">終了</string>

    <string name="textView1" />
    <string name="chronometer" />
    <string name="textView2" />
    <string name="disText">0.000km</string>
    <string name="textView4">position</string>
    <string name="address">ここに住所を表示</string>
</resources>
